--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <menu type="context"></menu>
     <title>conceptos de js</title>
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-    <script src="./js/01-variables.js"></script>
+    <script src="./js/01-variables.js"></script> 
   </body>
 </html>
